--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <dagger.version>2.5</dagger.version>
+    <gmd.version>2.1.1</gmd.version>
   </properties>
 
   <dependencyManagement>
@@ -49,13 +49,13 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
-            <annotationProcessorPaths>
-              <path>
-                <groupId>com.google.dagger</groupId>
-                <artifactId>dagger-compiler</artifactId>
-                <version>${dagger.version}</version>
-              </path>
-            </annotationProcessorPaths>
+<!--            <annotationProcessorPaths>-->
+<!--              <path>-->
+<!--                <groupId>com.google.dagger</groupId>-->
+<!--                <artifactId>dagger-compiler</artifactId>-->
+<!--                <version>${dagger.version}</version>-->
+<!--              </path>-->
+<!--            </annotationProcessorPaths>-->
           </configuration>
         </plugin>
         <plugin>
